# intel_cryo_TEC_linux

./: .gitignore  README.md  install.sh  intel-cryo-tec.service  tec.py
IntelCryoStatusApplet@example.org/: applet.js  metadata.json
tec_rust/: Cargo.toml
tec_rust/src/: cryo.rs  lib.rs  main.rs
tec_rust/tec/: Cargo.toml
tec_rust/tests/: tec_tests.rs
