[package]
name = "intel_cryo_tec_monitor"
version = "0.1.0"
authors = ["Jamie Beverly <jbeverly@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serialport = "4.2.2"
byteorder = "1.4.3"
serde_json = "1.0.107"
num = "0.4.1"
num-derive = "0.4.0"
num-traits = "0.2.16"
mockall = "0.11.4"
